# ava-exam

./: .gitignore  Digraph.gv  data_pipeline_diagram.gv  data_processing_pipeline_1.py  dev.ipynb  processing_pipeline_graph.py  pyproject.toml  question_1.ipynb  question_2.ipynb
data/processed/: customer_data.parquet  road_freight_data.parquet
